# Hayroll

./: .dockerignore  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  Extensibility.md  Limitations.md  README-pioneer.md  README-reaper.md  README-seeder.md  README.adoc  README.html  README.md  SAVE-README.md-SAVE  build.bash  email.txt  makefile  note.txt  prerequisites.bash  prerequisites.md  remove-all-llvm.bash  trace2.txt
.github/workflows/: style.yml  test-docker-17.yml  test-docker-20.yml  test-llvm17.yml  test-llvm18.yml  test-llvm19.yml  test-llvm20.yml  test-llvm20.yml-TODO  test.yml  test2.yml
include/: subprocess.hpp
src/: ASTBank.hpp  C2RustWrapper.hpp  CleanerWrapper.hpp  CompileCommand.hpp  DefineSet.hpp  HayrollCLI.cpp  IncludeResolver.hpp  IncludeTree.hpp  LineMatcher.hpp  LinemarkerEraser.hpp  MacroExpander.hpp  MacroSkeleton.cpp  MakiSummary.hpp  MakiWrapper.hpp  MergerWrapper.hpp  Pipeline.hpp  PremiseTree.hpp  ProgramPoint.hpp  ReaperWrapper.hpp  RemoveNonPreprocessor.cpp  RewriteIncludesWrapper.hpp  RustRefactorWrapper.hpp  Seeder.hpp  Splitter.hpp  SymbolTable.hpp  SymbolicExecutor.hpp  TempDir.hpp  TextEditor.hpp  TreeSitter.hpp  TreeSitterCPreproc.hpp  Util.hpp  analyzer.rs  cleaner.rs  cleaner_core.rs  hayroll.cpp  hayroll_ds.rs  hoe.cpp  inliner.rs  inliner_core.rs  lib.rs  (+13 more)
test-cases/: README.md  generate-absolute-paths.sh  run-test.sh  run-tests.sh
test-cases/multiple-commands/: compile_commands.json.in  main.c
test-cases/required-cli-define/: main.c
test-cases/simple-define-value/: main.c
test-cases/simple-define-value-cli/: compile_commands.json.in  main.c
test-cases/simple-defines/: compile_commands.json.in  main.c
test-cases/sphincs-minimized/: compile_commands.json.in  hash_haraka.c
test-cases/sphincs-minimized/include/: params.h
test-cases/sphincs-minimized/params/: params-sphincs-haraka-128s.h
test-cases/strings-multiple-commands/: compile_commands.json.in  main.c
tests/: ASTBank_test.cpp  C2RustWrapper_test.cpp  CompileCommand_test.cpp  DuplicateCompileCommands_test.cpp  IncludeTree_test.cpp  LineMatcher_test.cpp  LinemarkerEraser_test.cpp  MacroExpander_test.cpp  MakiWrapper_test.cpp  Pipeline_test.cpp  ReaperWrapper_test.cpp  RewriteIncludesWrapper_test.cpp  Seeder_test.cpp  SymbolTable_test.cpp  SymbolicExecutor_test.cpp  TempDir_test.cpp  TextEditor_test.cpp
testws/: sinhf.seeded.rs
