[package]
name = "hayroll"
version = "0.1.0"
edition = "2021"

[dependencies]
syntax = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
ide = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
ide-db = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
project-model = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
vfs = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
load-cargo = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
rustc-hash = "2.0.0"
rowan = "0.14.0"
anyhow = "1.0.75"

[[bin]]
name = "analyzer"
path = "src/analyzer.rs"

[[bin]]
name = "ws"
path = "src/ws.rs"
