[package]
name = "hayroll"
version = "0.1.6"
edition = "2021"

[dependencies]
syntax = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
ide = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
ide-db = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
project-model = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
vfs = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
load-cargo = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
hir = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
ide-assists = { git = "https://github.com/rust-lang/rust-analyzer" , tag = "2024-12-16" }
rustc-hash = "2.0.0"
rowan = "0.16.0"
anyhow = "1.0.75"
camino = "1.1.9"
serde_json = "1.0.133"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"

[[bin]]
name = "reaper"
path = "src/reaper.rs"

[[bin]]
name = "merger"
path = "src/merger.rs"

[[bin]]
name = "inliner"
path = "src/inliner.rs"

[[bin]]
name = "cleaner"
path = "src/cleaner.rs"
